tests/unit/language/errors/invalid_path_error.arche
// RUN: %arche build -o %t %s && %t
#import { io }
main :: proc() {
  arche_fopen_read("/nonexistent/path/to/file.csv")(fd:);
  printf("open() returned fd=%d\n", fd);
  assert(fd == 0, "should fail to open nonexistent file\n");
  printf("Invalid path error test PASSED\n");
  arche_fclose(move fd);
}
